--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/planties
-    username: machi
-    password:
+    url: jdbc:postgresql://planties-database.cq7ztlpnmlve.ap-southeast-1.rds.amazonaws.com:5432/planties
+    username: developer
+    password: rizal-galih-0nly
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -24,4 +24,4 @@ application:
 
 server:
   port: 8080
-  address: localhost
+  address: 172.31.31.129
